win32ss/drivers/miniport/xboxvmp/xboxvmp.c
@@ -62,7 +62,8 @@ XboxVmpFindAdapter(
 {
     PXBOXVMP_DEVICE_EXTENSION XboxVmpDeviceExtension;
     VP_STATUS Status;
-    VIDEO_ACCESS_RANGE AccessRanges[2];
+    /* 3 access ranges: for MMIO, VRAM, and Indirect memory access IO ports */
+    VIDEO_ACCESS_RANGE AccessRanges[3];
     USHORT VendorId = 0x10DE; /* NVIDIA Corporation */
     USHORT DeviceId = 0x02A0; /* NV2A XGPU */
     ULONG Slot = 0;
